Added WPP Email

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <div class="row">
         <div class="col-xl-9 mx-auto">
           <h2 class="mb-4">Contact Us!</h2>
-            <a href="mailto:we@wahineprocessingpower.org">we@wahineprocessingpower.org</a>
+           <h3><a href="mailto:we@wahineprocessingpower.org">we@wahineprocessingpower.org</a></h3> 
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
@@ -197,7 +197,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>-->
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Wahine Processing Power 2019. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
